KB-13902: added scorm validation changes